--- a/TheEvent Bootstrap Template - Index_files/embed.html
+++ b/TheEvent Bootstrap Template - Index_files/embed.html
@@ -1,3 +1,1 @@
-
-<!-- saved from url=(0011)about:blank -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></head><body></body></html>
+<div style="text-decoration:none; overflow:hidden;max-width:100%;width:900px;height:500px;"><div id="canvas-for-googlemap" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Prasad+V.+Potluri+Siddhartha+Institute+Of+Technology,+Chalasani+Nagar,+Kanuru,+Vijayawada,+Andhra+Pradesh,+India&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="the-googlemap-enabler" href="https://www.bootstrapskins.com/themes" id="make-map-infor-mation">premium bootstrap themes</a><style>#canvas-for-googlemap .text-marker{}.map-generator{max-width: 100%; max-height: 100%; background: none;</style></div>
