--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>EventCon</title>
+    <title>ICRAMIE - 2024 | PVPSIT</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="img/pvp.png">
+
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -676,7 +677,7 @@
     <div class="map_area">
         <div style="overflow:hidden;resize:none;max-width:100%;width:1700px;height:600px;"><div id="google-maps-canvas" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Prasad+V.+Potluri+Siddhartha+Institute+Of+Technology,+Chalasani+Nagar,+Kanuru,+Vijayawada,+Andhra+Pradesh,+India&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="googlecoder" rel="nofollow" href="https://www.bootstrapskins.com/themes" id="grab-map-authorization">premium bootstrap themes</a><style>#google-maps-canvas img{max-height:none;max-width:none!important;background:none!important;}</style></div>
         <div class="location_information black_bg wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-            <h3>Concert 2020</h3>
+            <h3>ICRAMIE 2024</h3>
             <div class="info_wrap">
                 <div class="single_info">
                     <span>Venue:</span>
@@ -781,7 +782,7 @@
                                 <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">The event
                                     regularly attracts a diverse range of attendees from around the world.</p>
                                 <a href="#" class="boxed-btn3 wow fadeInUp" data-wow-duration="1s"
-                                    data-wow-delay=".6s">Buy Tickets</a>
+                                    data-wow-delay=".6s" style="border-radius: 20px;">Buy Tickets</a>
                             </div>
                         </div>
                     </div>
