--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
     <link rel="shortcut icon" type="image/x-icon" href="img/pvp.png">
-
+    <link rel="icon" href="img/pvp.png">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -74,13 +74,13 @@
                                     </nav>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-lg-3 d-none d-lg-block">
+                            <!-- <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="buy_tkt">
                                     <div class="book_btn d-none d-lg-block">
                                         <a href="#" style="border-radius: 20px;">Buy Tickets</a>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="col-12">
                                 <div class="mobile_menu d-block d-lg-none"></div>
                             </div>
@@ -109,7 +109,8 @@
                             <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">22 & 23 March,
                                 2024</span>
                             <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s">ICRAMIE 2024</h3>
-                            <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">Prasad V Potluri
+                            <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">Dept. Of Mechnanical Engneering , <br>
+                                Prasad V Potluri
                                 Siddhartha Institute Of Technology , Vijayawada
                             </p>
                         </div>
@@ -134,7 +135,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="row">
-                        <div class="col-lg-4 col-md-4">
+                        <div class="col-lg-6 col-md-6">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
                                     <img src="img/performer/9.jpeg" alt="">
@@ -147,7 +148,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-4">
+                        <div class="col-lg-6 col-md-6">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                                 <div data-tilt class="thumb">
                                     <img src="img/performer/8.jpg" alt="">
@@ -259,7 +260,7 @@
                         <div class="col-lg-4 col-md-4">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/performer/6.png" alt="">
+                                    <img src="img/performer/6.jpg" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Dr. V.RAJ KUMAR</h4>
@@ -274,7 +275,7 @@
                         <div class="col-lg-4 col-md-4">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/performer/7.png" alt="">
+                                    <img src="img/performer/7.jpg" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Dr. VENU GOPAL. A</h4>
@@ -288,7 +289,7 @@
                         <div class="col-lg-4 col-md-4">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/performer/3.png" alt="">
+                                    <img src="img/performer/3.jpg" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Dr. PUTTI SRINIVASA RAO</h4>
@@ -302,7 +303,7 @@
                         <div class="col-lg-4 col-md-4">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/performer/2.png" alt="">
+                                    <img src="img/performer/2.jpg" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Dr. V.PANDU RANGA</h4>
@@ -316,7 +317,7 @@
                         <div class="col-lg-4 col-md-4">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/performer/1.png" alt="">
+                                    <img src="img/performer/1.jpg" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Dr. GUJJALA RAGHAVENDRA</h4>
@@ -328,7 +329,7 @@
                         <div class="col-lg-4 col-md-4">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/performer/4.png" alt="">
+                                    <img src="img/performer/4.jpg" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Dr.G.Raja Vamsi</h4>
@@ -344,7 +345,7 @@
                         <div class="col-lg-4 col-md-4">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/performer/5.png" alt="">
+                                    <img src="img/performer/5.jpg" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Dr. Santhosh Gosh</h4>
@@ -501,8 +502,8 @@
                         <p class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s"><small>This theme will
                                 focus on the latest developments in industrial engineering, such as ergonomics and
                                 supply chain management.</p></small>
-                        <a href="#" class="boxed-btn3  wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".7s">Buy
-                            Tickets</a>
+                        <!-- <a href="#" class="boxed-btn3  wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".7s">Buy
+                            Tickets</a> -->
                     </div>
                 </div>
             </div>
@@ -702,7 +703,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section_title text-center mb-80">
-                        <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">PUBLICATIONS
+                        <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">PUBLICATIONS IN PROCESS
                         </h4>
                     </div>
                 </div>
@@ -781,8 +782,8 @@
                                 <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">Prasad V Potluri Siddhartha Institute Of Technology , Vijayawada , Andhrapradesh PIN:520007</h3>
                                 <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">The event
                                     regularly attracts a diverse range of attendees from around the world.</p>
-                                <a href="#" class="boxed-btn3 wow fadeInUp" data-wow-duration="1s"
-                                    data-wow-delay=".6s" style="border-radius: 20px;">Buy Tickets</a>
+                                <!-- <a href="#" class="boxed-btn3 wow fadeInUp" data-wow-duration="1s"
+                                    data-wow-delay=".6s" style="border-radius: 20px;">Buy Tickets</a> -->
                             </div>
                         </div>
                     </div>
