Add existing project files to Git

--- a/index.html
+++ b/index.html
@@ -145,7 +145,16 @@
                             <img src="img/shape/shape_3.svg" alt="">
                         </div>
                         <div class="thumb_inner  wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-                            <img src="img/about/about.png" alt="">
+                            <img src="img/WhatsApp Image 2023-12-03 at 12.28.48.jpeg" alt="">
+                        </div>
+                    </div>
+                    <br><br>
+                    <div class="about_thumb">
+                        <div class="shap_3  wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s">
+                            <img src="img/shape/shape_3.svg" alt="">
+                        </div>
+                        <div class="thumb_inner  wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                            <img src="img/WhatsApp Image 2023-12-03 at 12.30.10.jpeg" alt="">
                         </div>
                     </div>
                 </div>
@@ -406,19 +415,6 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-4">
-                            <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
-                                <!-- <div data-tilt class="thumb">
-                                    <img src="img/performer/2.png" alt="">
-                                </div> -->
-                                <div class="performer_heading">
-                                    <br><br><br><br><br><br><br><br><br><br><br>
-                                    <h4>Dr. N. MOHAN RAO</h4>
-                                    <span>Professor & Director, Iiip & Training And Skill Development Center,
-                                        Jntuk</span>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -437,7 +433,7 @@
                             <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s ">Chief Patron(s)
                             </h4>
                             <ul class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s"
-                                style="color: aliceblue; ">
+                                style="color: aliceblue;font-size:large">
                                 <li>Sri Ch. Nageswara Rao, President, SAGTE</li>
                                 <li>Sri. P. Lakshmana Rao, Secretary, SAGTE</li>
                                 <li>Sri. S. Venkateswara Rao, Treasurer, SAGTE</li>
