--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
                                 <div class="porgram_top">
                                     <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">LAST DATE
                                         FOR SUBMISSION OF ABSTRACT</span>
-                                    <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">1st December,
+                                    <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">20 December,
                                         2024
                                     </h4>
                                 </div>
