--- a/index.html
+++ b/index.html
@@ -733,14 +733,14 @@
         <div class="footer_top">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-lg-6 col-md-8">
+                    <div class="col-lg-12 col-md-12">
                         <div class="footer_widget">
                             <div class="section_title text-center mb-80">
                                 <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">REGESTRATION FEES
                                 </h4>
                                 
                                 <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">
-                                    <table style="color: aliceblue; font-size:">
+                                    <table style="color: aliceblue; font-size:large">
                                     <thead>
                                         <tr>
                                             <th>Category</th>
