--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             ;">International conference on recent advancements in Mechnanical and industrial engineering</h4>
                             <br>
                             <br>
-                            <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">Department Of Mechnanical Engneering , <br><br><br><br><br>
+                            <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">Department Of Mechnanical Engneering , <br><br>
                                 Prasad V Potluri
                                 Siddhartha Institute Of Technology , Vijayawada
                             </p>
