--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     <link rel="stylesheet" href="css/slicknav.css">
 
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        .two-column {
+            columns: 2;
+        }
+    </style>
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
 
@@ -200,84 +205,90 @@
                                 supply chain management.</p></small>
                         <!-- <a href="#" class="boxed-btn3  wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".7s">Buy
                             Tickets</a> -->
-                            <div style="color: aliceblue;"><p>Papers are invited in the areas of</p>
-                                <ul>
-                                    <li><strong style="font-size: large;color:red">Manufacturing</strong>
-                                        <ul>
-                                            <li>Advanced Manufacturing Processes</li>
-                                            <li>Additive Manufacturing</li>
-                                            <li>Green Manufacturing</li>
-                                            <li>Industry 4.0</li>
-                                            <li>Conventional Machining Processes</li>
-                                            <li>Non-conventional Machining Processes</li>
-                                            <li>Micro Machining</li>
-                                            <li>Materials Processing</li>
-                                            <li>Surface Science & Engineering</li>
-                                            <li>Primary and secondary atomization</li>
-                                        </ul>
-                                    </li>
-                                    <li><strong style="font-size: large;color:red">Materials</strong>
-                                        <ul>
-                                            <li>Nano Materials</li>
-                                            <li>Advanced Composite Materials</li>
-                                            <li>Dispersion and Dispersants</li>
-                                            <li>Materials Characterization</li>
-                                            <li>Polymer composites</li>
-                                            <li>Metal matrix composites</li>
-                                            <li>Functionally graded materials</li>
-                                            <li>Renewable Materials</li>
-                                            <li>Solar Energy Materials</li>
-                                            <li>Advanced Computational materials</li>
-                                            <li>Biosensor and Bio-electronic Materials</li>
-                                            <li>Advanced Energy Materials</li>
-                                            <li>Material Chemistry</li>
-                                            <li>Metals, ceramics & polymers</li>
-                                        </ul>
-                                    </li>
-                                    <li><strong style="font-size: large;color:red">Fluid and Thermal</strong>
-                                        <ul>
-                                            <li>Heat and Mass transfer</li>
-                                            <li>Refrigeration & Air conditioning</li>
-                                            <li>Heat Exchangers</li>
-                                            <li>Flow measurements</li>
-                                            <li>Non-Conventional Energy Resources</li>
-                                            <li>Combustion & Pollution</li>
-                                            <li>Droplet and spray evaporation</li>
-                                            <li>Optical diagnostics and image processing</li>
-                                            <li>Colloidal and Suspensions</li>
-                                            <li>IC Engines</li>
-                                            <li>Fuels</li>
-                                            <li>Computational Fluid Dynamics</li>
-                                            <li>Green Energy and Energy Harvesting</li>
-                                        </ul>
-                                    </li>
-                                    <li><strong style="font-size: large;color:red">Design</strong>
-                                        <ul>
-                                            <li>Computational Mechanics</li>
-                                            <li>Sensors & Actuators</li>
-                                            <li>Materials failure analysis</li>
-                                            <li>Engineering Optimization</li>
-                                            <li>Finite element analysis</li>
-                                            <li>Machines and Mechanisms</li>
-                                            <li>Lightweight automobiles</li>
-                                            <li>Mechanics of Composites</li>
-                                            <li>Product design & development</li>
-                                            <li>Fatigue and Creep</li>
-                                            <li>Robotics</li>
-                                            <li>Biomechanics</li>
-                                            <li>Tribology</li>
-                                            <li>Vibrations</li>
-                                            <li>Fracture Mechanics</li>
-                                            <li>Vehicle Dynamics</li>
-                                            <li>Other research related to Mechanical Engineering/Industry 4.0/Industrial Engineering</li>
-                                        </ul>
-                                    </li>
-                                </ul></div>                    </div>
+                            
+                </div>
+                <div style="color: aliceblue;" class="two-column ">
+                    <p>Papers are invited in the areas of</p>
+                    <ul>
+                        <li><strong style="font-size: large; color: red;">Manufacturing</strong>
+                            <ul>
+                                <li>Advanced Manufacturing Processes</li>
+                                <li>Additive Manufacturing</li>
+                                <li>Green Manufacturing</li>
+                                <li>Industry 4.0</li>
+                                <li>Conventional Machining Processes</li>
+                                <li>Non-conventional Machining Processes</li>
+                                <li>Micro Machining</li>
+                                <li>Materials Processing</li>
+                                <li>Surface Science & Engineering</li>
+                                <li>Primary and secondary atomization</li>
+                            </ul>
+                        </li>
+                        <li><strong style="font-size: large; color: red;">Materials</strong>
+                            <ul>
+                                <li>Nano Materials</li>
+                                <li>Advanced Composite Materials</li>
+                                <li>Dispersion and Dispersants</li>
+                                <li>Materials Characterization</li>
+                                <li>Polymer composites</li>
+                                <li>Metal matrix composites</li>
+                                <li>Functionally graded materials</li>
+                                <li>Renewable Materials</li>
+                                <li>Solar Energy Materials</li>
+                                <li>Advanced Computational materials</li>
+                                <li>Biosensor and Bio-electronic Materials</li>
+                                <li>Advanced Energy Materials</li>
+                                <li>Material Chemistry</li>
+                                <li>Metals, ceramics & polymers</li>
+                            </ul>
+                        </li>
+                        <br><br><br><br><br><br><br>
+                        <li><strong style="font-size: large; color: red;">Fluid and Thermal</strong>
+                            <ul>
+                                <li>Heat and Mass transfer</li>
+                                <li>Refrigeration & Air conditioning</li>
+                                <li>Heat Exchangers</li>
+                                <li>Flow measurements</li>
+                                <li>Non-Conventional Energy Resources</li>
+                                <li>Combustion & Pollution</li>
+                                <li>Droplet and spray evaporation</li>
+                                <li>Optical diagnostics and image processing</li>
+                                <li>Colloidal and Suspensions</li>
+                                <li>IC Engines</li>
+                                <li>Fuels</li>
+                                <li>Computational Fluid Dynamics</li>
+                                <li>Green Energy and Energy Harvesting</li>
+                            </ul>
+                        </li>
+                        <li><strong style="font-size: large; color: red;">Design</strong>
+                            <ul>
+                                <li>Computational Mechanics</li>
+                                <li>Sensors & Actuators</li>
+                                <li>Materials failure analysis</li>
+                                <li>Engineering Optimization</li>
+                                <li>Finite element analysis</li>
+                                <li>Machines and Mechanisms</li>
+                                <li>Lightweight automobiles</li>
+                                <li>Mechanics of Composites</li>
+                                <li>Product design & development</li>
+                                <li>Fatigue and Creep</li>
+                                <li>Robotics</li>
+                                <li>Biomechanics</li>
+                                <li>Tribology</li>
+                                <li>Vibrations</li>
+                                <li>Fracture Mechanics</li>
+                                <li>Vehicle Dynamics</li>
+                                <li>Other research related to Mechanical Engineering/Industry 4.0/Industrial Engineering</li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
+    
 </section>
+
     <!-- about_area_end  -->
 <section id="Committee">
     <!-- performar_area_start  -->
